packages/typ/tests/fixtures/diagnostics/0496_modules_signature_arity_mismatch_07.ml.expected
File "0496_modules_signature_arity_mismatch_07.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0496_modules_signature_arity_mismatch_07 is not a valid module name.

File "0496_modules_signature_arity_mismatch_07.ml", line 3, characters 10-25:
3 |   val x : (int, bool) box
              ^^^^^^^^^^^^^^^
Error: The type constructor box expects 1 argument(s),
       but is here applied to 2 argument(s)
